<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="GenericState" Id="{ff519a79-22ab-45b2-84ef-736d8c8fe6fd}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK GenericState
VAR_INPUT
	LineName	: STRING(40);
	MachineName : STRING(40);
	StateName	: STRING(40);
	TimeStamp	: ULINT;
	Value		: INT;	 
	Enable		: BOOL; 		//enable state evaluation
END_VAR
VAR_OUTPUT
	OpcUaVal		: SingleState_DataModel;
END_VAR
VAR
	SetParameter : BOOL := TRUE;	
	
	stValues		: SingleState_DataModel;	
	
	// safety watchdog
	tonWatchdog : TON;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[(*
This FB evaluates any state value and creates output struct for OPC UA
*) 

IF Enable THEN
	
	IF SetParameter THEN
		SetParameter := FALSE;
		// constant entry
		stValues.LineName := LineName;
		stValues.MachineName := MachineName;
		stValues.StateName := StateName;
	END_IF
	
	stValues.TimeStamp := TimeStamp;
	stValues.StateValue := Value;
		
	OpcUaVal := stValues;
ELSE
	;
END_IF;
]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>